2010-02-03  Drew Wilson  <atwilson@chromium.org>

Reviewed by Alexey Proskuryakov.

        SharedWorkerScriptLoader should not be an ActiveDOMObject
        https://bugs.webkit.org/show_bug.cgi?id=34513

        Test: Existing tests suffice (fixes test downstream in Chrome).

        * workers/DefaultSharedWorkerRepository.cpp:
        (WebCore::SharedWorkerScriptLoader::SharedWorkerScriptLoader):
        Changed to no longer derive from ActiveDOMObject (handles its own refcounting).
        (WebCore::SharedWorkerScriptLoader::load):
        Now increments own refcount when a load is pending.
        (WebCore::SharedWorkerScriptLoader::notifyFinished):
        Changed to decrement refcount when load is complete.
        * workers/WorkerScriptLoaderClient.h:
        Documentation change about reliability of notifyFinished() when used from worker context.
2010-02-03  Drew Wilson  <atwilson@chromium.org>

        Reviewed by Alexey Proskuryakov.

        SharedWorkerScriptLoader should not be an ActiveDOMObject
        https://bugs.webkit.org/show_bug.cgi?id=34513

        * src/SharedWorkerRepository.cpp:
        (WebCore::SharedWorkerScriptLoader::SharedWorkerScriptLoader):
        Changed SharedWorkerScriptLoader to manage its own lifecycle without using ActiveDOMObject.
        (WebCore::SharedWorkerScriptLoader::parentContext):
        (WebCore::pendingLoaders):
        Now we manually track pending loads so we can shut them down when the parent context shuts down.
        (WebCore::SharedWorkerScriptLoader::contextDetached):
        Shuts down/frees any pending worker loads.
        (WebCore::SharedWorkerScriptLoader::~SharedWorkerScriptLoader):
        Marks the SharedWorker object as not having pending activity if there was a load active (handles case where load was pending when parent document exits).
        (WebCore::SharedWorkerScriptLoader::load):
        (WebCore::SharedWorkerRepository::documentDetached):
        Now calls SharedWorkerScriptLoader::contextDetached() to shutdown any pending worker loads.

Canonical link: https://commits.webkit.org/45635@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54292 268f45cc-cd09-0410-ab3c-d52691b4dbfc