WebCore/workers/WorkerScriptLoaderClient.h
@@ -34,8 +34,10 @@ namespace WebCore {
 
     class WorkerScriptLoaderClient {
     public:
+        // FIXME: notifyFinished() is not currently guaranteed to be invoked if used from worker context and the worker shuts down in the middle of an operation.
+        // This will cause leaks when we support nested workers.
         virtual void notifyFinished() { }
-        
+
     protected:
         virtual ~WorkerScriptLoaderClient() { }
     };
